# particle-life

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  netlify.toml  particle-life.wasm  rust-toolchain.toml  script.js  worker.js
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: step.rs
pkg/: particle-life.js  particle-life_bg.wasm  particle_life.js  particle_life_bg.wasm  particle_life_web.d.ts  particle_life_web.js  particle_life_web_bg.wasm  particle_life_web_bg.wasm.d.ts
src/: channel.rs  compute.wgsl  kinds.rs  lib.rs  main.rs  particle.rs  render.wgsl  settings.rs  shader.wgsl  sim.rs  universe.rs  wasm.rs
src/channel/: native.rs  wasm.rs
