[package]
name = "particle-life"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
getrandom = { version = "0.2.9", features = ["js"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
log = "0.4.18"
palette = { version = "0.7.2", features = ["bytemuck"] }
rand = "0.8.5"
rand_distr = "0.4.3"
wgpu = { version = "0.16.1", features = ["webgl"] }
winit = { git = "https://github.com/Liamolucko/winit.git", branch = "resize-observer2", features = ["css-size"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
# Keep this version in sync with .github/workflows/ci.yml
wasm-bindgen = "=0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = ["Document", "Element", "Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
pollster = "0.3.0"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "step"
harness = false
