[package]
name = "particle-life"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
getrandom = { version = "0.2.10", features = ["js"] }
glam = { version = "0.24.1", features = ["bytemuck"] }
log = "0.4.19"
palette = { version = "0.7.2", features = ["bytemuck"] }
rand = "0.8.5"
rand_distr = "0.4.3"
web-time = "0.2.0"
wgpu = { version = "0.16.2", features = ["webgl"] }
winit = "0.29.0-beta.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
# Keep this version in sync with .github/workflows/ci.yml
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Document", "Element", "Window", "Performance"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
pollster = "0.3.0"

[profile.release]
debug = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "step"
harness = false
